hphp/test/zend/good/Zend/tests/bug52484.php.expectf

Fatal error: Cannot access empty property in %s/bug52484.php on line 5
